# fastapi-amis-mongo-admin

./: README.md  pyproject.toml
example/: main.py
fastapi_amis_admin/amis/: components.py  types.py
fastapi_amis_admin/amis/data_display/: barcode.py  calendar.py  card.py  cards.py  carousel.py  chart.py  code.py  color.py  crud.py  date.py  each.py  gridnav.py  html.py  icon.py  iframe.py  image.py  images.py  json.py  link.py  list.py  log.py  mapping.py  markdown.py  number.py  office_viewer.py  pdf_viewer.py  progress.py  property.py  qrcode.py  remark.py  search_box.py  sparkline.py  status.py  steps.py  table.py  table2.py  tablebiew.py  tag.py  timeline.py  video.py
fastapi_amis_admin/amis/data_input/: button_group_select.py  button_toolbar.py  chained_select.py  chart_radios.py  checkbox.py  checkboxes.py  combo.py  condition_builder.py  control.py  diff_editor.py  editor.py  fieldset.py  form.py  form_item.py  formula.py  group.py  hidden.py  inpu_month.py  input_array.py  input_city.py  input_color.py  input_date.py  input_date_range.py  input_datetime.py  input_datetime_range.py  input_excel.py  input_file.py  input_formula.py  input_group.py  input_image.py  input_kv.py  input_kvs.py  input_month_range.py  input_number.py  input_password.py  input_quarter.py  input_quarter_range.py  input_range.py  input_rating.py  input_repeat.py  (+31 more)
fastapi_amis_admin/amis/feedback/: alert.py  dialog.py  drawer.py  spinner.py  toast.py
fastapi_amis_admin/amis/function/: action.py  anchor_nav.py  app.py  breadcrumb.py  button.py  button_group.py  custom.py  nav.py  (+4 more)
(+20 files in other folders)
