[project]
name = "fastapi-amis-mongo-admin"
version = "0.1.0"
description = "FastAPI Amis Mongo Admin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/InfernalAzazel/fastapi-amis-mongo-admin"
Repository = "https://github.com/InfernalAzazel/fastapi-amis-mongo-admin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_amis_admin"]

[dependency-groups]
dev = [
    "fastapi-users[beanie]>=14.0.1",
    "fastapi[standard]>=0.117.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ujson>=5.11.0",
]
